--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,27 @@
-.main {
-  width: 100%;
-  height: 100vh;
-  padding: 20px;
-  
+@font-face {
+  font-family: "game";
+  src: url(../fonts/BotsmaticOutline-anZg.ttf);
 }
-.main>div{
-  width: 275px;
-  height: 30%;
+* {
+  outline: 0;
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+body {
+  background-color: antiquewhite;
+}
+
+main {
   margin: 0 auto;
+  margin-top: 50px;
+  background-color: aqua;
+  width: 276px;
+  height: 400px;
 }
-.remove{
-  display: none;
-}
+
+h1 {
+  font-size: 30px;
+  font-family: "game";
+}/*# sourceMappingURL=style.css.map */
